Adding final changes connected to big refactoring, including fixed tests and some small bugs in ServiceLayer