@@ -49,15 +49,15 @@ public class SMSHistoryRepositoryIT {
                 null,
                 new Date(),
                 "Test message",
-                Arrays.asList("GroupA", "GroupB"),
-                Arrays.asList("user1@example.com", "user2@example.com"),
-                Arrays.asList("extra1@example.com"),
+                List.of("GroupA", "GroupB"),
+                List.of("user1@example.com", "user2@example.com"),
+                List.of("extra1@example.com"),
                 true
         );
         entity = smsHistoryRepository.create(entity);
         String generatedId = entity.getId();
 
-        SMSHistoryEntity retrieved = smsHistoryRepository.findById(generatedId);
+        SMSHistoryEntity retrieved = smsHistoryRepository.findByPrimaryKey(generatedId);
         Assertions.assertNotNull(retrieved, "Entity should be present in repository.");
         Assertions.assertEquals("Test message", retrieved.getMessage(), "Message should match.");
         Assertions.assertEquals(2, retrieved.getGroups().size(), "Groups count should match.");
@@ -71,7 +71,7 @@ public class SMSHistoryRepositoryIT {
      */
     @Order(2)
     @Test
-    public void testFindByDate() throws InterruptedException {
+    public void testFindByDate() {
         Date now = new Date();
         Date past = new Date(System.currentTimeMillis() - 100000);
         Date future = new Date(System.currentTimeMillis() + 100000);
@@ -103,19 +103,19 @@ public class SMSHistoryRepositoryIT {
      */
     @Order(1)
     @Test
-    public void testFindByDateAutomatic() throws InterruptedException {
+    public void testFindByDateAutomatic() {
         Date now = new Date();
         Date past = new Date(System.currentTimeMillis() - 100000);
         Date future = new Date(System.currentTimeMillis() + 100000);
 
         SMSHistoryEntity entity1 = new SMSHistoryEntity(
-                null, past, "Old message", Arrays.asList(), Arrays.asList(), Arrays.asList(), true
+                null, past, "Old message", List.of(), List.of(), List.of(), true
         );
         SMSHistoryEntity entity2 = new SMSHistoryEntity(
-                null, now, "Current message", Arrays.asList(), Arrays.asList(), Arrays.asList(), false
+                null, now, "Current message", List.of(), List.of(), List.of(), false
         );
         SMSHistoryEntity entity3 = new SMSHistoryEntity(
-                null, future, "Future message", Arrays.asList(), Arrays.asList(), Arrays.asList(), true
+                null, future, "Future message", List.of(), List.of(), List.of(), true
         );
 
         smsHistoryRepository.create(entity1);
@@ -138,9 +138,9 @@ public class SMSHistoryRepositoryIT {
         // Pass null for the ID to let the provider generate it.
         SMSHistoryEntity entity = new SMSHistoryEntity(
                 null, new Date(), "Old message",
-                Arrays.asList("OldGroup"),
-                Arrays.asList("old@example.com"),
-                Arrays.asList("extra@example.com"),
+                List.of("OldGroup"),
+                List.of("old@example.com"),
+                List.of("extra@example.com"),
                 false
         );
         entity = smsHistoryRepository.create(entity);
@@ -148,11 +148,11 @@ public class SMSHistoryRepositoryIT {
 
         // Update message and recipients
         entity.setMessage("Updated message");
-        entity.setRecipients(Arrays.asList("updated@example.com"));
+        entity.setRecipients(List.of("updated@example.com"));
         entity.setAutomatic(true);
         smsHistoryRepository.create(entity);
 
-        SMSHistoryEntity updated = smsHistoryRepository.findById(generatedId);
+        SMSHistoryEntity updated = smsHistoryRepository.findByPrimaryKey(generatedId);
         Assertions.assertNotNull(updated, "Entity should still exist after update.");
         Assertions.assertEquals("Updated message", updated.getMessage(), "Updated message should match.");
         Assertions.assertEquals(1, updated.getRecipients().size(), "Updated recipients count should match.");
@@ -168,16 +168,16 @@ public class SMSHistoryRepositoryIT {
         // Pass null for the ID to let the provider generate it.
         SMSHistoryEntity entity = new SMSHistoryEntity(
                 null, new Date(), "Test deletion",
-                Arrays.asList("GroupX"),
-                Arrays.asList("delete@example.com"),
-                Arrays.asList("extra@example.com"),
+                List.of("GroupX"),
+                List.of("delete@example.com"),
+                List.of("extra@example.com"),
                 true
         );
         entity = smsHistoryRepository.create(entity);
         String generatedId = entity.getId();
 
-        smsHistoryRepository.deleteById(generatedId);
-        SMSHistoryEntity deleted = smsHistoryRepository.findById(generatedId);
+        smsHistoryRepository.deleteByPrimaryKey(generatedId);
+        SMSHistoryEntity deleted = smsHistoryRepository.findByPrimaryKey(generatedId);
         Assertions.assertNull(deleted, "Entity should be deleted from repository.");
     }
 
@@ -187,7 +187,7 @@ public class SMSHistoryRepositoryIT {
     @Order(6)
     @Test
     public void testFindNonExistentEntity() {
-        SMSHistoryEntity retrieved = smsHistoryRepository.findById("SMS-999");
+        SMSHistoryEntity retrieved = smsHistoryRepository.findByPrimaryKey("SMS-999");
         Assertions.assertNull(retrieved, "Should return empty for non-existent entity.");
     }
 }
